# aapt-cmake-build

./: CMakeLists.txt
buildscript/aapt/: CMakeLists.txt
buildscript/aapt2/: CMakeLists.txt
buildscript/aapt2_jni/: CMakeLists.txt
buildscript/aapt2_static/: CMakeLists.txt
buildscript/aapt_static/: CMakeLists.txt
buildscript/androidfw/: CMakeLists.txt
buildscript/base/: CMakeLists.txt
buildscript/compiler-rt/: CMakeLists.txt
buildscript/expat/: CMakeLists.txt
buildscript/libcutils/: CMakeLists.txt
buildscript/libcxx/: CMakeLists.txt
buildscript/libcxxabi/: CMakeLists.txt
buildscript/liblog/: CMakeLists.txt
buildscript/libpng/: CMakeLists.txt
buildscript/libutils/: CMakeLists.txt
buildscript/libziparchive/: CMakeLists.txt
buildscript/protobuf/aprotoc/: CMakeLists.txt
buildscript/protobuf/libprotobuf-cpp-lite/: CMakeLists.txt
buildscript/zlib/: CMakeLists.txt
script/aapt2_static/: CMakeLists.txt
script/libcutils/: CMakeLists.txt
script/libcxxabi/: CMakeLists.txt
script/liblog/: CMakeLists.txt
script/libutils/: CMakeLists.txt
